* Install script looked very broken in IE6 (install.css) [Bug 3824]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9627 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/install.css
+++ b/Themes/default/css/install.css
@@ -1,3 +1,12 @@
+#top_section
+{
+	height: 70px;
+	min-height: 65px;
+}
+#upper_section
+{
+	margin-bottom: 0;
+}
 #upper_section .user
 {
 	height: 4em;
@@ -18,11 +27,6 @@
 	margin: 0 0 0.5em 0;
 	color: #d05800;
 }
-#content_section
-{
-	margin-top: -20px;
-	zoom: 1;
-}
 #main-steps
 {
 	float: right;
@@ -31,9 +35,9 @@
 }
 #main-steps h2
 {
-	font-size: 1.5em;
+	font-size: 1.1em;
 	border-bottom: 1px solid #d05800;
-	line-height: 1.5em;
+	line-height: 1.1em;
 	margin: 0 0 0.5em 0;
 	color: #d05800;
 	margin-right: 40px;
@@ -46,7 +50,8 @@
 }
 #main-steps ul li
 {
-	padding: 3px 0;
+	padding: 2px 0;
+	font-size: 0.9em;
 }
 #main-steps ul li.stepdone
 {
